# Spodcast

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile  Dockerfile.cron  Dockerfile.web  cron.sh  docker-compose.yml  run.sh
docker/nginx/: nginx.conf
docker/nginx/sites-enabled/: spodcast
spodcast/: __main__.py  app.py  config.py  const.py  feedgenerator.py  podcast.py  spodcast.py  spotapi.py  utils.py
