[metadata]
name = spodcast
version = 0.5.0
description = A caching Spotify podcast to RSS proxy.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Yetangitu/spodcast.git
project_urls =
    Bug Tracker = https://github.com/Yetangitu/spodcast/issues
author = yetangitu
author_email = github-f@unternet.org
licence = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.9
    Programming Language :: PHP
platforms = any

[options]
packages =
    spodcast
install_requires =
    librespot >= 0.0.5
    pybase62
    ffmpeg-python
    setuptools
include_package_data =
    True

[options.entry_points]
console_scripts:
    spodcast = spodcast.__main__:main
